<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/ic_title_home"/>

    <item
        android:id="@+id/menuWorld"
        android:icon="@drawable/ic_menu_world"
        android:title="@string/ic_title_world" />

    <item
        android:id="@+id/menuScience"
        android:icon="@drawable/ic_menu_science"
        android:title="@string/ic_title_science" />

    <item
        android:id="@+id/menuSport"
        android:icon="@drawable/ic_menu_sport"
        android:title="@string/ic_title_sport" />
    <item
        android:id="@+id/menuEnvironment"
        android:icon="@drawable/ic_menu_environment"
        android:title="@string/ic_title_environment" />
    <item
        android:id="@+id/menuSociety"
        android:icon="@drawable/ic_menu_society"
        android:title="@string/ic_title_society" />
    <item
        android:id="@+id/menuFashion"
        android:icon="@drawable/ic_menu_fashion"
        android:title="@string/ic_title_fashion" />
    <item
        android:id="@+id/menuBusiness"
        android:icon="@drawable/ic_menu_business"
        android:title="@string/ic_title_business" />
    <item
        android:id="@+id/menuCulture"
        android:icon="@drawable/ic_menu_culture"
        android:title="@string/ic_title_culture" />

    <item android:title="@string/others">

        <menu>
            <item
                android:id="@+id/menulogIn"
                android:icon="@drawable/ic_login"
                android:title="@string/ic_title_login" />

            <item
                android:id="@+id/menuSignUp"
                android:icon="@drawable/ic_signup"
                android:title="@string/ic_title_signup" />

        </menu>

    </item>


</menu>